Fixed spacing on Chrome

--- a/css/main.scss
+++ b/css/main.scss
@@ -221,6 +221,7 @@ header {
             margin: 0;
             text-transform: uppercase;
             font-size: 2.5em;
+            margin-bottom: -1em;
         }
         .introduction p {
             position: relative;
@@ -228,7 +229,7 @@ header {
             width: 100%;
             max-width: 440px;
             margin: 0;
-            margin-top: -15%;
+            margin-top: -2em;
         }
         .introduction a {
             position: relative;
@@ -236,7 +237,6 @@ header {
             color: #FF00D5;
             border: 1px solid #FF00D5;
             margin: 0;
-            margin-top: -12%;
             font-size: 1.3em;
             text-transform: uppercase;
             transition: 0.3s;
